Refactor HTML and CSS for L'Oréal branding and styling updates

--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <!-- Add official and fallback fonts for L'Oréal branding -->
+    <link
+      href="https://fonts.cdnfonts.com/css/helvetica-now-display"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Helvetica+Neue:300,400,700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.cdnfonts.com/css/bauer-bodoni" rel="stylesheet" />
   </head>
 
   <body>
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
-        <h1 class="site-title">Smart Product Advisor</h1>
+        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
+        <h1 class="site-title">L’Oréal Product Advisor</h1>
       </header>
 
       <!------- Chat Area ------->
@@ -49,7 +60,7 @@
 
       <!------- Footer Links ------->
       <footer class="site-footer">
-        <p>&copy; 2025 Company Name. All rights reserved.</p>
+        <p>&copy; 2025 L’Oréal Paris. All rights reserved.</p>
         <nav>
           <!-- These URLs are placeholders -->
           <a href="#">Privacy Policy</a>
