Fix logo image path and update copyright notice in footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
-        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
+        <img src="loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
         <h1 class="site-title">L’Oréal Product Advisor</h1>
       </header>
 
@@ -60,9 +60,8 @@
 
       <!------- Footer Links ------->
       <footer class="site-footer">
-        <p>&copy; 2025 L’Oréal Paris. All rights reserved.</p>
+        <p>&copy; 2025 L’Oréal. All rights reserved.</p>
         <nav>
-          <!-- These URLs are placeholders -->
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Use</a>
           <a href="#">Contact</a>
