--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     </div>
 
     <!-- secrets.js can be removed when using Cloudflare Workers for API requests -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.3.0/marked.min.js"></script>
     <script src="secrets.js"></script>
     <script src="script.js"></script>
   </body>
