--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
-        <img src="loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
+        <img
+          src="8ff743cf-5b27-4607-bd9b-299146d59629.png"
+          alt="L'Oréal Logo"
+          class="loreal-logo"
+        />
         <h1 class="site-title">L’Oréal Product Advisor</h1>
       </header>
 
