Update L'Oréal logo source and adjust styling for improved display

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
     <div class="page-wrapper">
       <!------- Header / Branding ------->
       <header class="site-header">
-        <img
-          src="8ff743cf-5b27-4607-bd9b-299146d59629.png"
-          alt="L'Oréal Logo"
-          class="loreal-logo"
-        />
+        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="loreal-logo" />
         <h1 class="site-title">L’Oréal Product Advisor</h1>
       </header>
 
